Fix spacing on custom compare

--- a/app/javascript/app/components/custom-compare-accordion/custom-compare-accordion-styles.scss
+++ b/app/javascript/app/components/custom-compare-accordion/custom-compare-accordion-styles.scss
@@ -20,3 +20,9 @@
 .accordion {
   width: 100%;
 }
+
+.compareDefinitionList {
+  > div {
+    padding: 10px 0;
+  }
+}
